<resources>
    <string name="app_name">TopQuiz</string>
    <string name="welcome_text">Hello ! Welcome</string>
    <string name="name_text">What\'s your name ?</string>
    <string name="name_hint">Ex: Ben</string>
    <string name="btn_text">Let\'s Play</string>
    <string name="question">Question ?</string>
    <string name="answer1">Answer 1</string>
    <string name="answer2">Answer 2</string>
    <string name="answer3">Answer 3</string>
    <string name="answer4">Answer 4</string>
    <string name="welcome_back_with_score">Welcome back, %s!\nYour last score was %d, will you do better this time?</string>
    <string name="welcome_back">Welcome back, %s!</string>
    <string name="hello_user">Hello %s</string>
</resources>