<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/nameEditTex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_text"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:textSize="25sp"
        android:textStyle="bold"/>

</androidx.appcompat.widget.LinearLayoutCompat>